--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Title</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     
 </head>
 
-<nav>
-    <div>
-    <h1>Simon's Website</h1>
-    <h1>29/04/22</h1>
-    </div>
-
-</nav>
 
   <div class="sidebar">
+      <div>Contact</div>
+      <div>Help</div>
+      <div>Vinyl</div>
+      <div>Our Story</div>
 
 
   <div class="products-list-container" >
@@ -48,6 +46,20 @@
         </div> 
     </div>
   </div>
+
+  <nav>
+      <div>Account</div>
+      <div>Cart</div>
+      <div>Info</div>
+
+      <!-- <ul>
+        <li>Account</li>
+        <li>Cart</li>
+        <li>Info</li>
+    </ul> -->
+
+
+</nav>
 
 
 </body>
