Added a .bottom-navbar class

--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@
         <div>Releases</div>
     </div>
 
-
-
-
-
-
-
     <div class="sidebar">
         <div>Contact</div>
         <div>Help</div>
@@ -66,10 +60,13 @@
             </div>
         </div>
 
-        <nav>
-            <div>Account</div>
-            <div>Cart</div>
-            <div>Info</div>
+        <nav class="bottom-navbar">
+            <ul>
+                <li>Account</li>
+                <li>Cart</li>
+                <li>Info</li>
+            </ul>
+        </nav>
 
             <!-- <ul>
         <li>Account</li>
@@ -78,8 +75,6 @@
     </ul> -->
 
 
-        </nav>
-        
 </body>
 
 </html>
