Bottom navbar elements put into a single line

--- a/index.html
+++ b/index.html
@@ -61,11 +61,9 @@
         </div>
 
         <nav class="bottom-navbar">
-            <ul>
-                <li>Account</li>
-                <li>Cart</li>
-                <li>Info</li>
-            </ul>
+                <div>Account</div>
+                <div>Cart</div>
+                <div>Info</div>
         </nav>
 
         <!-- <ul>
