Added Box Model Fix and Placeholder Logo Tp Rt

--- a/index.html
+++ b/index.html
@@ -16,11 +16,20 @@
 
 <body>
 
+
+
     <div class="top-navbar">
         <div>Shop</div>
         <div>Genres</div>
         <div>Releases</div>
+
+        <div class="logo">
+            <div>Placeholder Logo</div>
+        </div>
+        
     </div>
+
+    
 
     <div class="sidebar">
         <div>Contact</div>
