Linked 'Lausse' Image into HTML

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="product">
                     <h3 class="product-name"> Product #1</h3>
                     <div class="img-container">
-                        <img />
+                        <img src="https://f4.bcbits.com/img/a2525751729_16.jpg"> 
                     </div>
                 </div>
                 <div class="product">
