Placed Product#4 in its parent container

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="product">
                     <h3 class="product-name"> Product #1</h3>
                     <div class="img-container">
-                        <img src="https://f4.bcbits.com/img/a2525751729_16.jpg"> 
+                        <img> 
                     </div>
                 </div>
                 <div class="product">
@@ -61,7 +61,7 @@
                 <div class="product">
                     <h3 class="product-name"> Product #4</h3>
                     <div class="img-container">
-                        <img />
+                        <img src="https://f4.bcbits.com/img/a2525751729_16.jpg" alt="Lausse the Cat, the Girl the Cat, and the Tree album cover">
                     </div>
                 </div>
 
