Laid out 3 Product Images in their Containers

--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
 
         <div class="products-list-container">
             <div class="products-list">
-                <div class="product">
+                <div class="product"> <!-- Enfant Sauvage -->
                     <h3 class="product-name"> Product #1</h3>
                     <div class="img-container">
-                        <img> 
+                        <img src="https://www.enfantsauvagemusic.com/images/Enfant-Sauvage---PETRICHOR-p-800.jpeg">
                     </div>
                 </div>
-                <div class="product">
+                <div class="product"> <!-- P.R.O.B.L.E.M.S-->
                     <h3 class="product-name"> Product #2</h3>
                     <div class="img-container">
-                        <img />
+                        <img src= https://f4.bcbits.com/img/a3523042631_10.jpg/>
                     </div>
                 </div>
-                <div class="product">
+                <div class="product"> <!-- Lausse The Cat -->
                     <h3 class="product-name"> Product #3</h3>
                     <div class="img-container">
-                        <img />
+                        <img src="https://f4.bcbits.com/img/a2525751729_16.jpg" alt="Lausse the Cat, the Girl the Cat, and the Tree album cover">
                     </div>
                 </div>
-                <div class="product">
+                <div class="product"> 
                     <h3 class="product-name"> Product #4</h3>
                     <div class="img-container">
                         <img src="https://f4.bcbits.com/img/a2525751729_16.jpg" alt="Lausse the Cat, the Girl the Cat, and the Tree album cover">
