--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="product"> 
                     <h3 class="product-name"> Product #4</h3>
                     <div class="img-container">
-                        <img src="https://f4.bcbits.com/img/a2525751729_16.jpg" alt="Lausse the Cat, the Girl the Cat, and the Tree album cover">
+                        <img src="https://i1.sndcdn.com/artworks-000108073283-drl32w-t500x500.jpg">
                     </div>
                 </div>
 
