--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
                         <img src="https://i1.sndcdn.com/artworks-000108073283-drl32w-t500x500.jpg">
                     </div>
                 </div>
+                <div class="product"> <!-- CS + Kreme (Snoopy)-->
+                    <h3 class="product-name"> Product #5</h3>
+                    <div class="img-container">
+                        <img src="https://f4.bcbits.com/img/a2555170779_16.jpg">
+                    </div>
+                </div>
+                <div class="product"> <!-- Citiers Aviv -->
+                    <h3 class="product-name"> Product #6</h3>
+                    <div class="img-container">
+                        <img src="https://f4.bcbits.com/img/a1531358424_10.jpg">
+                    </div>
+                </div>
 
 
             </div>
