Placed P#1 name to bottom of image as test

--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
         <div>Help</div>
         <div>Vinyl</div>
         <div>Our Story</div>
+    </div>
 
 
         <div class="products-list-container">
             <div class="products-list">
                 <div class="product"> <!-- Enfant Sauvage -->
-                    <h3 class="product-name"> Product #1</h3>
+                  
                     <div class="img-container">
                         <img src="https://www.enfantsauvagemusic.com/images/Enfant-Sauvage---PETRICHOR-p-800.jpeg">
+                        <h3 class="product-name"> Product #1</h3>
                     </div>
                 </div>
                 <div class="product"> <!-- P.R.O.B.L.E.M.S-->
