--- a/index.html
+++ b/index.html
@@ -16,30 +16,29 @@
 
 <body>
 
+    <div><img src="" alt=""></div>
+
 
 
     <div class="top-navbar">
         <div>Shop</div>
         <div>Genres</div>
         <div>Releases</div>
-
-        <div class="logo">
-            <div>Placeholder Logo</div>
-        </div>
+    </div>
+    <div class="logo">
+        <div>Placeholder Logo</div>
+    </div>
 
     </div>
 
 
 
     <div class="sidebar-container">
-        <div class="sidebar">
-            <div>Contact</div>
-            <div>Help</div>
-            <div>Vinyl</div>
-            <div>Our Story</div>
-        </div>
+        <div>Contact</div>
+        <div>Help</div>
+        <div>Vinyl</div>
+        <div>Our Story</div>
     </div>
-
 
 
     <div class="products-list-container">
