--- a/main/index.html
+++ b/main/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div><img src="" alt=""></div>
+    
 
 
 
@@ -25,7 +25,7 @@
         <div>Genres</div>
         <div>Releases</div>
         <div class="logo">
-        <div>Placeholder Logo</div>
+        <div><img src="../assets/imgs/oz_music_logo.png" alt=""></div>
         </div>
     
     </div>
