--- a/main/index.html
+++ b/main/index.html
@@ -18,9 +18,9 @@
 
 
     <div class="top-navbar">
-        <div>Shop</div>
-        <div>Genres</div>
-        <div>Releases</div>
+        <div><a class="btn" href="#">Shop</a></div>
+        <div><a class="btn" href="#">Genres</a></div>
+        <div><a class="btn" href="#">Releases</a></div>
         <div class="logo">
             <div><img src="../assets/imgs/oz_music_logo.png" alt=""></div>
         </div>
