--- a/main/index.html
+++ b/main/index.html
@@ -18,16 +18,14 @@
 
 
     <div class="top-navbar">
-        <div><a class="btn" href="#">Shop</a></div>
-        <div><a class="btn" href="#">Genres</a></div>
-        <div><a class="btn" href="#">Releases</a></div>
-        <div class="logo">
-            <div><img src="../assets/imgs/oz_music_logo.png" alt=""></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Shop</a></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Releases</a></div>
+        <div><a class="btn logo" href="#">
+            <img src="../assets/imgs/oz_music_logo.png" alt=""></a></div>
         </div>
 
     </div>
-
-
 
 
     <div class="sidebar">
@@ -82,7 +80,6 @@
                     <img src="https://f4.bcbits.com/img/a1531358424_10.jpg">
             
             </div>
-        <!-- </div> -->
     </section>
 
 
