Gave everything inside "bottom-navbar" a margin

--- a/main/index.html
+++ b/main/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-    <div class="top-navbar">
+    <div class="cluster">
         <div><a class="btn btn-primary btn-primary--accent" href="#">Shop</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Releases</a></div>
