--- a/main/search-page.html
+++ b/main/search-page.html
@@ -13,17 +13,75 @@
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
+
 <body>
 
-<nav class="cluster">
-    <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Shop</a></div>
-    <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
-    <div><a class="btn btn-primary btn-primary--accent" href="#">Releases</a></div>
-    <div><a class="btn logo" href="#">
-            <img src="../assets/imgs/oz_music_logo.png" alt=""></a></div>
-</nav>
+    <nav class="cluster">
+        <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Shop</a></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Releases</a></div>
+        <div><a class="btn logo" href="index.html">
+                <img src="../assets/imgs/oz_music_logo.png" alt=""></a></div>
+    </nav>
 
-<div></div>
+
+
+
+    <div class="sidebar">
+        <div>Contact</div>
+        <div>Help</div>
+        <div>Vinyl</div>
+        <div>Our Story</div>
+    </div>
+
+
+    <section>
+        <div class="product-card">
+            <h3> Protomartyr</h3>
+            <img src="https://f4.bcbits.com/img/0002686207_10.jpg" alt="Protomartyr Group Image">
+        </div>
+        <img src="https://f4.bcbits.com/img/a2431281189_2.jpg" alt="">
+        <img src="https://f4.bcbits.com/img/a3843978202_16.jpg" alt="">
+        <img src="https://f4.bcbits.com/img/a2791434963_16.jpg" alt="">
+
+        </div>
+
+
+        <!-- <div class="product-card">
+     
+        <h3 class="product-name"> Product #2</h3>
+        <img src=>
+    </div>
+
+    <div class="product-card">
+
+        <h3 class="product-name"> Product #3</h3>
+
+        <img src="https://f4.bcbits.com/img/a2525751729_16.jpg"
+            alt="Lausse the Cat, the Girl the Cat, and the Tree album cover">
+
+    </div>
+    <div class="product-card">
+        <h3 class="product-name"> Product #4</h3>
+
+        <img src="https://i1.sndcdn.com/artworks-000108073283-drl32w-t500x500.jpg">
+
+    </div>
+    <div class="product-card">
+
+        <h3 class="product-name"> Product #5</h3>
+
+        <img src="https://f4.bcbits.com/img/a2555170779_16.jpg">
+
+    </div>
+    <div class="product-card">
+
+        <h3 class="product-name"> Product #6</h3>
+
+        <img src="https://f4.bcbits.com/img/a1531358424_10.jpg"> -->
+
+        </div>
+    </section>
 
 </body>
 
