Tried Implementing the Sidebar

--- a/main/index.html
+++ b/main/index.html
@@ -27,13 +27,13 @@
 
     </div>
 
-
+<!-- 
     <div class="sidebar">
         <div>Contact</div>
         <div>Help</div>
         <div>Vinyl</div>
         <div>Our Story</div>
-    </div>
+    </div> -->
 
 
     <section class="grid-layout">
