--- a/main/index.html
+++ b/main/index.html
@@ -20,9 +20,11 @@
     <div class="cluster">
         <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Shop</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
-        <div><a class="btn btn-primary btn-primary--accent" href="#">Releases</a></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Product</a></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Cart</a></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Info</a></div>
         <div><a class="btn logo" href="index.html">
-                <img src="../assets/imgs/oz_music_logo.png" alt=""></a></div>
+                <img src="/assets/images/oz_music_logo.png" alt=""></a></div>
     </div>
 
     </div>
@@ -86,17 +88,8 @@
     </div>
     </div>
 
-    <nav class="bottom-navbar">
-        <div>Account</div>
-        <div>Cart</div>
-        <div>Info</div>
-    </nav>
-
-    <!-- <ul>
-        <li>Account</li>
-        <li>Cart</li>
-        <li>Info</li>
-    </ul> -->
+ 
+ 
 
 
 </body>
