--- a/main/search-page.html
+++ b/main/search-page.html
@@ -15,73 +15,62 @@
 </head>
 
 <body>
-
-    <nav class="cluster">
+    <div class="cluster">
         <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Shop</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
-        <div><a class="btn btn-primary btn-primary--accent" href="#">Releases</a></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Product</a></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Cart</a></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Info</a></div>
         <div><a class="btn logo" href="index.html">
-                <img src="../assets/imgs/oz_music_logo.png" alt=""></a></div>
-    </nav>
+                <img src="/assets/images/oz_music_logo.png"></a></div>
 
-
-
-
-    <div class="sidebar">
-        <div>Contact</div>
-        <div>Help</div>
-        <div>Vinyl</div>
-        <div>Our Story</div>
     </div>
 
+    <!-- <nav class="sidebar-container">
+        <ul>
+            <li><a href="#" class="active">Contact</a> </li>
+            <li><a href="#">Vinyl</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Our Story</a></li>
+        </ul>
+    </nav> -->
 
-    <section>
+
+    <section class="grid-layout">
         <div class="product-card">
             <h3> Protomartyr</h3>
-            <img src="https://f4.bcbits.com/img/0002686207_10.jpg" alt="Protomartyr Group Image">
-        </div>
-        <img src="https://f4.bcbits.com/img/a2431281189_2.jpg" alt="">
-        <img src="https://f4.bcbits.com/img/a3843978202_16.jpg" alt="">
-        <img src="https://f4.bcbits.com/img/a2791434963_16.jpg" alt="">
-
+            <img src="/assets/images/protomartyr-hero-banner.jpg" alt="Protomartyr Group Image">
         </div>
 
+        <div class="product-card"> <img src="https://f4.bcbits.com/img/a2431281189_2.jpg" alt="">
+        </div>
 
-        <!-- <div class="product-card">
-     
-        <h3 class="product-name"> Product #2</h3>
-        <img src=>
-    </div>
+        <div class="product-card"> <img src="https://f4.bcbits.com/img/a3843978202_16.jpg" alt="">
+        </div>
 
-    <div class="product-card">
-
-        <h3 class="product-name"> Product #3</h3>
-
-        <img src="https://f4.bcbits.com/img/a2525751729_16.jpg"
-            alt="Lausse the Cat, the Girl the Cat, and the Tree album cover">
-
-    </div>
-    <div class="product-card">
-        <h3 class="product-name"> Product #4</h3>
-
-        <img src="https://i1.sndcdn.com/artworks-000108073283-drl32w-t500x500.jpg">
-
-    </div>
-    <div class="product-card">
-
-        <h3 class="product-name"> Product #5</h3>
-
-        <img src="https://f4.bcbits.com/img/a2555170779_16.jpg">
-
-    </div>
-    <div class="product-card">
-
-        <h3 class="product-name"> Product #6</h3>
-
-        <img src="https://f4.bcbits.com/img/a1531358424_10.jpg"> -->
-
+        <div class="product-card"> <img src="https://f4.bcbits.com/img/a2791434963_16.jpg" alt="">
         </div>
     </section>
+
+
+    <section class="grid-layout">
+        <div class="product-card">
+            <h3> Ross from Friends</h3>
+            <img src="/assets/images/ross-from-friends-banner.png" alt="">
+        </div>
+
+        <div class="product-card">
+            <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt="">
+        </div>
+
+        <div class="product-card"> 
+            <img src="/assets/images/ross-from-friends-burner-ep.jpg" alt="">
+        </div>
+
+        <div class="product-card"> 
+            <img src="/assets/images/ross-from-friends-tread.jpg" alt="">
+        </div>
+
 
 </body>
 
