--- a/main/search-page.html
+++ b/main/search-page.html
@@ -24,6 +24,7 @@
         <div><a class="btn logo" href="index.html">
                 <img src="/assets/images/oz_music_logo.png"></a></div>
 
+
     </div>
 
     <!-- <nav class="sidebar-container">
@@ -34,6 +35,8 @@
             <li><a href="#">Our Story</a></li>
         </ul>
     </nav> -->
+
+
 
 
     <section class="grid-layout">
@@ -59,17 +62,24 @@
             <img src="/assets/images/ross-from-friends-banner.png" alt="">
         </div>
 
+        <!-- <div><a class="btn logo" href="index.html">
+                <img src="/assets/images/oz_music_logo.png" alt=""></a></div> -->
+
         <div class="product-card">
-            <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt="">
+            <h3>Aphelion EP</h3>
+            <div><a class="" href="indv-prod-pg.html">
+                <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt=""></a>
+            </div>
         </div>
 
-        <div class="product-card"> 
+        <div class="product-card">
             <img src="/assets/images/ross-from-friends-burner-ep.jpg" alt="">
         </div>
 
-        <div class="product-card"> 
+        <div class="product-card">
             <img src="/assets/images/ross-from-friends-tread.jpg" alt="">
         </div>
+        </section>
 
 
 </body>
