--- a/main/indv-prod-pg.html
+++ b/main/indv-prod-pg.html
@@ -27,28 +27,70 @@
 
 
     </div>
-        <div class="product-card">
-            <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt="">
-   
+    <div class="product-card">
+        <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt="">
+
+    </div>
+
+    <div>
+        <div class="product-header">
+            <h2>Aphelion EP</h2>
         </div>
 
-        <div> 
-            <h3>Aphelion EP</h3>
-            <h3>Ross From Friends</h3>
+        <div>
+            </h3> by Ross From Friends</h2>
         </div>
 
-        <div class="product-card">
+        <div>
+            <h3>Ross From Friends - 'Aphelion EP' 12" [BF068]
+                Record/Vinyl + Digital Album</h3>
+        </div>
+        <div class="album-about">
+            <h3>
+                British producer Ross From Friends aka Felix Clary Weatherall is the newest signing to Flying Lotus’s
+                Brainfeeder family. The 24 year old has a fistful of releases under his belt, the distillation of myriad
+                influences from hip-hop cut ’n’ paste culture, 80s Eurobeat, Hi-NRG and Italo into lithe, irresistible,
+                raw dancefloor trax. He made his debut on Breaker Breaker in 2015, followed by outings on Lobster
+                Theremin and sister imprint Distant Hawaii, Lone’s Magicwire and recently: Molten Jets.
 
+                “It’s honestly an absolute rush to sign to Brainfeeder,” he explains. “It has always been pushing such a
+                forward thinking sound, one that constantly grabs my attention with every release. I put these 4 tracks
+                together with Brainfeeder in mind; I wanted to explore the music that I’ve been developing over the past
+                7 years as Ross From Friends whilst trying to explore the explosive sound that the label is best known
+                for.”
 
+                Up first, ‘John Cage’ encapsulates both his desire to experiment but also maintain a sense of fun. “It
+                originally began life as a tune for this goofy hip-hop project that me and my pal Guy from back home
+                always do when he’s in London,” explains Felix. “I’d be making the beat and he raps. It’s always a
+                refreshing approach making tracks in that atmosphere because we’re both always on such a spontaneous
+                tip. When I’m making music alone, I’m obsessive and everything takes hours, whereas with Guy, we’d try
+                and get as many tracks finished as possible in like a few hours. That’s him freestyling a relaxation
+                tape in the intro.”</h3>
         </div>
 
-        <div class="product-card">
-
+        <div id = "add-to-cart-product-page"> 
+            <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Add to Cart</a></div>
         </div>
+    </div>
 
-        <div class="product-card">
- 
-        </div>
+
+    </div>
+
+    <div class="product-card">
+
+
+    </div>
+
+    <div class="product-card">
+
+    </div>
+
+    <div class="product-card">
+
+    </div>
+
+
+
 
 
 </body>
