Linked Add to Cart to Form Page

--- a/main/indv-prod-pg.html
+++ b/main/indv-prod-pg.html
@@ -69,7 +69,7 @@
         </div>
 
         <div id = "add-to-cart-product-page"> 
-            <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Add to Cart</a></div>
+            <div><a class="btn btn-primary btn-primary--accent" href="form.html">Add to Cart</a></div>
         </div>
     </div>
 
