--- a/main/form.html
+++ b/main/form.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
 
-    <h2>Form Design</h2>
+    <h2>Form Draft</h2>
     <form>
         <label>Name:</label>
         <input type="text" class="textInput" id="signup__name" name="name"/>
