Test Commit (Computer Lab)

--- a/main/indv-prod-pg.html
+++ b/main/indv-prod-pg.html
@@ -77,18 +77,24 @@
     </div>
 
     <div class="product-card">
+        <img src="https://f4.bcbits.com/img/0012884363_10.jpg" alt="">
 
 
     </div>
 
     <div class="product-card">
+        <img src="https://f4.bcbits.com/img/0012884364_10.jpg" alt="">
 
     </div>
 
     <div class="product-card">
+        <img src="https://f4.bcbits.com/img/0012884365_10.jpg" alt="">
 
     </div>
 
+    <div>
+        <h3>Discography</h3>
+    </div>
 
 
 
