Fixed the Aphelion EP Button issue

--- a/main/search-page.html
+++ b/main/search-page.html
@@ -39,7 +39,7 @@
 
 
 
-    <section class="grid-layout">
+    <div class="product-layout">
         <div class="product-card">
             <h3> Protomartyr</h3>
             <img src="/assets/images/protomartyr-hero-banner.jpg" alt="Protomartyr Group Image">
@@ -53,17 +53,14 @@
 
         <div class="product-card"> <img src="https://f4.bcbits.com/img/a2791434963_16.jpg" alt="">
         </div>
-    </section>
+    </div>
 
 
-    <section class="grid-layout">
+    <section class="">
         <div class="product-card">
             <h3> Ross from Friends</h3>
             <img src="/assets/images/ross-from-friends-banner.png" alt="">
         </div>
-
-        <!-- <div><a class="btn logo" href="index.html">
-                <img src="/assets/images/oz_music_logo.png" alt=""></a></div> -->
 
         <div class="product-card">
             <h3>Aphelion EP</h3>
