--- a/main/index.html
+++ b/main/index.html
@@ -22,14 +22,14 @@
         <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Product</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Cart</a></div>
-        <div><a class="btn btn-primary btn-primary--accent" href="#">Info</a></div>
+        <div><a class="btn btn-primary btn-primary--accent" href="#">Account</a></div>
         <div><a class="btn logo" href="index.html">
                 <img src="/assets/images/oz_music_logo.png" alt=""></a></div>
     </div>
 
     </div>
 
-<!-- 
+    <!-- 
     <div class="sidebar">
         <div>Contact</div>
         <div>Help</div>
@@ -38,58 +38,76 @@
     </div> -->
 
 
-    <section class="grid-layout">
-        <!-- <div class="not-sidebar"> -->
-        <!-- Enfant Sauvage -->
+    <div class="product-layout">
         <div class="product-card">
-            <h3 class="product-name"> Product #1</h3>
+            <!-- <h3 class="product-name"> Enfant Sauvage </h3> -->
             <img src="https://www.enfantsauvagemusic.com/images/Enfant-Sauvage---PETRICHOR-p-800.jpeg">
-
+            <div class="product-description">
+                <h3 class="product-name"> Enfant Sauvage </h3>
+            </div>
         </div>
 
 
         <div class="product-card">
             <!-- P.R.O.B.L.E.M.S-->
-            <h3 class="product-name"> Product #2</h3>
             <img src=https://f4.bcbits.com/img/a3523042631_10.jpg />
+            <div class="product-description">
+                <h3 class="product-name"> P.R.O.B.L.E.M.S </h3>
+            </div>
         </div>
 
         <div class="product-card">
             <!-- Lausse The Cat -->
-            <h3 class="product-name"> Product #3</h3>
+            <!-- <h3 class="product-name"> Lausse the Cat </h3> -->
 
             <img src="https://f4.bcbits.com/img/a2525751729_16.jpg"
                 alt="Lausse the Cat, the Girl the Cat, and the Tree album cover">
+            <div class="product-description">
+                <h3 class="product-name"> Lausse the Cat </h3>
+                <h3 class="product-name"> The Girl, The Cat and The Tree </h3>
+            </div>
 
         </div>
+
+
+
+
         <div class="product-card">
-            <h3 class="product-name"> Product #4</h3>
-
+            <!-- <h3 class="product-name"> SEATBELTS </h3> -->
             <img src="https://i1.sndcdn.com/artworks-000108073283-drl32w-t500x500.jpg">
-
+            <div class="product-description">
+                <h3 class="product-name"> SEATBELTS </h3>
+                <h3 class="product-name"> Cowboy Bebop OST </h3>
         </div>
+        </div>
+
+
+
+
         <div class="product-card">
             <!-- CS + Kreme (Snoopy)-->
-            <h3 class="product-name"> Product #5</h3>
-
             <img src="https://f4.bcbits.com/img/a2555170779_16.jpg">
+            <div class="product-description">
+                <h3 class="product-name"> CS + Kreme </h3>
+                <h3 class="product-name"> Snoopy </h3>
+            </div>
 
         </div>
+
+
         <div class="product-card">
             <!-- Citiers Aviv -->
-            <h3 class="product-name"> Product #6</h3>
+            <!-- <h3 class="product-name"> Cities Aviv </h3> -->
 
             <img src="https://f4.bcbits.com/img/a1531358424_10.jpg">
+            <div class="product-description">
+                <h3 class="product-name"> Cities Aviv </h3>
+                <h3 class="product-name"> If I Could Hold Your Soul </h3>
+            </div>
 
         </div>
-    </section>
-
-
-    </div>
     </div>
 
- 
- 
 
 
 </body>
