--- a/main/index.html
+++ b/main/index.html
@@ -20,7 +20,7 @@
     <div class="cluster">
         <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Shop</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
-        <div><a class="btn btn-primary btn-primary--accent" href="#">Product</a></div>
+        <!-- <div><a class="btn btn-primary btn-primary--accent" href="#">Product</a></div> -->
         <div><a class="btn btn-primary btn-primary--accent" href="#">Cart</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Account</a></div>
         <div><a class="btn logo" href="index.html">
