--- a/main/search-page.html
+++ b/main/search-page.html
@@ -18,7 +18,7 @@
     <div class="cluster">
         <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Shop</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
-        <div><a class="btn btn-primary btn-primary--accent" href="#">Product</a></div>
+        <!-- <div><a class="btn btn-primary btn-primary--accent" href="#">Product</a></div> -->
         <div><a class="btn btn-primary btn-primary--accent" href="#">Cart</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Info</a></div>
         <div><a class="btn logo" href="index.html">
@@ -35,8 +35,6 @@
             <li><a href="#">Our Story</a></li>
         </ul>
     </nav> -->
-
-
 
 
     <div class="product-layout">
@@ -56,7 +54,7 @@
     </div>
 
 
-    <section class="">
+    <section class="product-layout">
         <div class="product-card">
             <h3> Ross from Friends</h3>
             <img src="/assets/images/ross-from-friends-banner.png" alt="">
@@ -64,9 +62,9 @@
 
         <div class="product-card">
             <h3>Aphelion EP</h3>
-            <div><a class="" href="indv-prod-pg.html">
-                <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt=""></a>
-            </div>
+            <a href="indv-prod-pg.html">
+            <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt=""/>
+        </a>
         </div>
 
         <div class="product-card">
@@ -76,7 +74,7 @@
         <div class="product-card">
             <img src="/assets/images/ross-from-friends-tread.jpg" alt="">
         </div>
-        </section>
+    </section>
 
 
 </body>
