Fixed(?) Aphelion image link overflow issue

--- a/main/search-page.html
+++ b/main/search-page.html
@@ -54,28 +54,30 @@
     </div>
 
 
-    <section class="product-layout">
+    <div class="product-layout">
         <div class="product-card">
             <h3> Ross from Friends</h3>
             <img src="/assets/images/ross-from-friends-banner.png" alt="">
         </div>
 
-        <div class="product-card">
-            <h3>Aphelion EP</h3>
-            <a href="indv-prod-pg.html">
-            <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt=""/>
-        </a>
+
+        <div>
+            <a class="product-card" href="indv-prod-pg.html">
+                <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt=""></a>
         </div>
+
+        <!-- "/assets/images/ross-from-friends-aphelion-ep.jpg"  -->
+
 
         <div class="product-card">
             <img src="/assets/images/ross-from-friends-burner-ep.jpg" alt="">
         </div>
 
-        <div class="product-card">
-            <img src="/assets/images/ross-from-friends-tread.jpg" alt="">
+        <div>
+            <a class="product-card" href="indv-prod-pg.html">
+                <img src="/assets/images/ross-from-friends-tread.jpg" alt=""></a>
         </div>
-    </section>
-
+    </div>
 
 </body>
 
