--- a/main/search-page.html
+++ b/main/search-page.html
@@ -40,7 +40,7 @@
     <div class="product-layout">
         <div class="product-card">
             <h3> Protomartyr</h3>
-            <img src="/assets/images/protomartyr-hero-banner.jpg" alt="Protomartyr Group Image">
+            <img src="https://f4.bcbits.com/img/0002686207_10.jpg" alt="Protomartyr Group Image">
         </div>
 
         <div class="product-card"> <img src="https://f4.bcbits.com/img/a2431281189_2.jpg" alt="">
@@ -57,25 +57,22 @@
     <div class="product-layout">
         <div class="product-card">
             <h3> Ross from Friends</h3>
-            <img src="/assets/images/ross-from-friends-banner.png" alt="">
+            <img src="https://f4.bcbits.com/img/0020680483_100.png" alt="">
         </div>
-
 
         <div>
             <a class="product-card" href="indv-prod-pg.html">
-                <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt=""></a>
+                <img src="https://f4.bcbits.com/img/a0586786272_16.jpg" alt=""></a>
         </div>
-
-        <!-- "/assets/images/ross-from-friends-aphelion-ep.jpg"  -->
 
 
         <div class="product-card">
-            <img src="/assets/images/ross-from-friends-burner-ep.jpg" alt="">
+            <img src="https://f4.bcbits.com/img/a1456774771_10.jpg" alt="">
         </div>
 
         <div>
             <a class="product-card" href="indv-prod-pg.html">
-                <img src="/assets/images/ross-from-friends-tread.jpg" alt=""></a>
+                <img src="https://f4.bcbits.com/img/a0751377172_16.jpg" alt=""></a>
         </div>
     </div>
 
