--- a/main/form.html
+++ b/main/form.html
@@ -12,8 +12,13 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/style.css">
 
+</head>
+
+<body>
+  
+
   <form action="success.html" method="GET">
-    
+
     <div>
       <label>Email:</label>
       <input type="email" class="textInput" id="signup__email" name="email" />
@@ -21,30 +26,55 @@
 
 
     <div>
-      <label for="first-name-id" > First Name:</label>
+      <label for="first-name-id"> First Name:</label>
       <input type="text" class="textInput" id="first-name-id" name="first-name" />
     </div>
 
     <div>
-      <label for="last-name-id" >Last Name:</label>
-      <input type="text" class= "textInput" id="last-name-id" name="last-name" />
+      <label for="last-name-id">Last Name:</label>
+      <input type="text" class="textInput" id="last-name-id" name="last-name" />
     </div>
 
     <!-- <label>Password:</label>
         <input type="password" class="textInput"  id="signup__pwd" name = "pwd"/> -->
 
-    <div class="terms">
+    <!-- <div class="terms">
       <input type="checkbox" />
       <label>I agree to the terms and privacy policy</label>
-    </div>
+    </div> -->
 
+    <!-- <p>Shipping method</p> -->
+    <fieldset>
+      <legend>Shipping Method</legend>
+      <div>
+        <input type="radio" id="methodChoice1" name="delivery" value="billing-address">
+        <label for="methodChoice1">Billing Address</label><br>
+
+        <input type="radio" id="methodChoice2" name="delivery" value="different-address">
+        <label for="methodChoice2">Different Address</label><br>
+
+        <input type="radio" id="methodChoice3" name="delivery" value="multiple-addresses">
+        <label for="methodChoice3">Multiple Addressess</label><br>
+      </div>
+    </fieldset>
+
+    <div>
+      <label for="company-id">Company Name:</label>
+      <input type="text" class="textInput" id="company-id" name="first-name" />
+
+    </div>
     <div class="buttons">
       <a href="#" class="btn btn-primary">Confirm & Process Payment</a>
       <!-- <a href="#" class="btn btn-secondary">Sign In</a> -->
     </div>
-
-    <div></div>
+    
+  </body>
 
   </form>
 
-</head>
+  <!-- Dropdown Menu -->
+  <!-- <label for="card-type"> Choose an Option </label>
+<select id="card-type" name="payment-card">
+<option value ="mastercard">Mastercard</option>
+</select> -->
+
