Squashed image link - commented out flex: 0 1

--- a/main/search-page.html
+++ b/main/search-page.html
@@ -60,8 +60,8 @@
             <img src="https://f4.bcbits.com/img/0020680483_100.png" alt="">
         </div>
 
-        <div>
-            <a class="product-card" href="indv-prod-pg.html">
+        <div class="product-card">
+            <a href="indv-prod-pg.html">
                 <img src="https://f4.bcbits.com/img/a0586786272_16.jpg" alt=""></a>
         </div>
 
@@ -71,10 +71,19 @@
         </div>
 
         <div>
-            <a class="product-card" href="indv-prod-pg.html">
+            <a href="indv-prod-pg.html">
                 <img src="https://f4.bcbits.com/img/a0751377172_16.jpg" alt=""></a>
         </div>
     </div>
+
+    <div class="product-card">
+        <div class = "product-info">
+          <a href="#">link 1</a>
+        </div>
+        <a href="#">link 2</a>    
+        <a href="#">link 3</a>   
+      </div>
+      <a>link 4</a>
 
 </body>
 
