--- a/main/form.html
+++ b/main/form.html
@@ -63,14 +63,21 @@
       <input type="text" class="textInput" id="company-id" name="first-name" />
 
     </div>
-    <div class="buttons">
+
+ 
+<button class="btn btn-primary" type="submit">Submit</button>
+
+
+  </form>
+
+    
+
+    <!-- <div class="buttons">
       <a href="#" class="btn btn-primary">Confirm & Process Payment</a>
-      <!-- <a href="#" class="btn btn-secondary">Sign In</a> -->
-    </div>
+    </div> -->
     
   </body>
 
-  </form>
 
   <!-- Dropdown Menu -->
   <!-- <label for="card-type"> Choose an Option </label>
