removed child selector for prod page

--- a/main/search-page.html
+++ b/main/search-page.html
@@ -39,8 +39,7 @@
 
     <div class="product-layout">
         <div class="product-card">
-            <h3> Protomartyr</h3>
-            <img src="https://f4.bcbits.com/img/0002686207_10.jpg" alt="Protomartyr Group Image">
+            <img src="https://www.discrepancy-records.com.au/assets/full/W0-50625.jpg?20211110190251" alt="">
         </div>
 
         <div class="product-card"> <img src="https://f4.bcbits.com/img/a2431281189_2.jpg" alt="">
@@ -61,16 +60,20 @@
         </div>
 
         <div class="product-card">
-            <a href="indv-prod-pg.html">
-                <img src="https://f4.bcbits.com/img/a0586786272_16.jpg" alt=""></a>
+            <div class="product-info">
+            <a href="indv-prod-pg.html"><img src="https://f4.bcbits.com/img/a0586786272_16.jpg">
+                </a>
+            </div>
         </div>
+
+       
 
 
         <div class="product-card">
             <img src="https://f4.bcbits.com/img/a1456774771_10.jpg" alt="">
         </div>
 
-        <div>
+        <div class="product-card">
             <a href="indv-prod-pg.html">
                 <img src="https://f4.bcbits.com/img/a0751377172_16.jpg" alt=""></a>
         </div>
