Rough header placed in personal info form

--- a/main/search-page.html
+++ b/main/search-page.html
@@ -55,38 +55,30 @@
 
     <div class="product-layout">
         <div class="product-card">
-            <h3> Ross from Friends</h3>
-            <img src="https://f4.bcbits.com/img/0020680483_100.png" alt="">
+            <img src="https://www.discrepancy-records.com.au/assets/full/SON00063.jpg?20211111125827" alt="">
         </div>
 
         <div class="product-card">
             <div class="product-info">
-            <a href="indv-prod-pg.html"><img src="https://f4.bcbits.com/img/a0586786272_16.jpg">
+                <a href="indv-prod-pg.html"><img src="https://f4.bcbits.com/img/a0586786272_16.jpg">
                 </a>
             </div>
         </div>
 
-       
-
+        <div class="product-card">
+            <div class="product-info">
+                <a href="indv-prod-pg.html"><img src="https://f4.bcbits.com/img/a1456774771_10.jpg" alt="">
+                </a>
+            </div>
+        </div>
 
         <div class="product-card">
-            <img src="https://f4.bcbits.com/img/a1456774771_10.jpg" alt="">
+            <div class="product-info">
+                <a href="indv-prod-pg.html"><img src="https://f4.bcbits.com/img/a0751377172_16.jpg" alt="">
+                </a>
+            </div>
         </div>
 
-        <div class="product-card">
-            <a href="indv-prod-pg.html">
-                <img src="https://f4.bcbits.com/img/a0751377172_16.jpg" alt=""></a>
-        </div>
-    </div>
-
-    <div class="product-card">
-        <div class = "product-info">
-          <a href="#">link 1</a>
-        </div>
-        <a href="#">link 2</a>    
-        <a href="#">link 3</a>   
-      </div>
-      <a>link 4</a>
 
 </body>
 
