--- a/main/personal-info-form.html
+++ b/main/personal-info-form.html
@@ -15,24 +15,33 @@
 </head>
 
 <body>
-  
+
+
+  <div class="header-cluster">
+    <div><a class="logo" href="index.html">
+        <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a></div>
+    <div><img id="secure-icon" src="https://cdn-icons-png.flaticon.com/512/81/81566.png"
+        alt="Security icons created by Freepik - Flaticon"> </div>
+
+  </div>
+
+  </div>
 
   <form action="success.html" method="GET">
 
     <div>
       <label>Email:</label>
-      <input type="email" class="textInput" id="signup__email" name="email" />
+      <input type="email" class="textInput" id="signup__email" name="email" required />
     </div>
-
 
     <div>
       <label for="first-name-id"> First Name:</label>
-      <input type="text" class="textInput" id="first-name-id" name="first-name" />
+      <input type="text" class="textInput" id="first-name-id" name="first-name" required />
     </div>
 
     <div>
       <label for="last-name-id">Last Name:</label>
-      <input type="text" class="textInput" id="last-name-id" name="last-name" />
+      <input type="text" class="textInput" id="last-name-id" name="last-name" required />
     </div>
 
     <!-- <label>Password:</label>
@@ -44,6 +53,7 @@
     </div> -->
 
     <!-- <p>Shipping method</p> -->
+
     <fieldset>
       <legend>Shipping Method</legend>
       <div>
@@ -64,24 +74,23 @@
 
     </div>
 
- 
-<button class="btn btn-primary" type="submit">Submit</button>
+
+    <button class="btn btn-primary" type="submit">Proceed to Payment Options</button>
 
 
   </form>
 
-    
 
-    <!-- <div class="buttons">
+
+  <!-- <div class="buttons">
       <a href="#" class="btn btn-primary">Confirm & Process Payment</a>
     </div> -->
-    
-  </body>
+
+</body>
 
 
-  <!-- Dropdown Menu -->
-  <!-- <label for="card-type"> Choose an Option </label>
+<!-- Dropdown Menu -->
+<!-- <label for="card-type"> Choose an Option </label>
 <select id="card-type" name="payment-card">
 <option value ="mastercard">Mastercard</option>
 </select> -->
-
