--- a/main/personal-info-form.html
+++ b/main/personal-info-form.html
@@ -31,28 +31,45 @@
 
     <div>
       <label>Email:</label>
-      <input type="email" class="textInput" id="signup__email" name="email" required />
+      <input type="email" class="textInput" id="signup__email" name="email" />
     </div>
 
     <div>
       <label for="first-name-id"> First Name:</label>
-      <input type="text" class="textInput" id="first-name-id" name="first-name" required />
+      <input type="text" class="textInput" id="first-name-id" name="first-name" />
     </div>
 
     <div>
       <label for="last-name-id">Last Name:</label>
-      <input type="text" class="textInput" id="last-name-id" name="last-name" required />
+      <input type="text" class="textInput" id="last-name-id" name="last-name" />
     </div>
 
-    <!-- <label>Password:</label>
-        <input type="password" class="textInput"  id="signup__pwd" name = "pwd"/> -->
+    <div>
+      <label for="last-name-id">Address</label>
+      <input type="text" class="textInput" id="last-name-id" name="last-name" />
+    </div>
 
-    <!-- <div class="terms">
-      <input type="checkbox" />
-      <label>I agree to the terms and privacy policy</label>
-    </div> -->
+    <div>
+      <label for="last-name-id">Post Code</label>
+      <input type="text" class="textInput" id="last-name-id" name="last-name" />
+    </div>
 
-    <!-- <p>Shipping method</p> -->
+    <div>
+      <label for="last-name-id">Suburb/City</label>
+      <input type="text" class="textInput" id="last-name-id" name="last-name" />
+    </div>
+
+    <div>
+      <label for="last-name-id">State/Territory</label>
+      <input type="text" class="textInput" id="last-name-id" name="last-name" />
+    </div>
+
+    <div>
+      <label for="last-name-id">Phone Number</label>
+      <input type="text" class="textInput" id="last-name-id" name="last-name"/>
+    </div>
+
+
 
     <fieldset>
       <legend>Shipping Method</legend>
@@ -69,22 +86,26 @@
     </fieldset>
 
     <div>
-      <label for="company-id">Company Name:</label>
-      <input type="text" class="textInput" id="company-id" name="first-name" />
-
+      <label for="signature-required">Signature not required on delivery</label>
+      <input type="checkbox" />
     </div>
 
 
-    <button class="btn btn-primary" type="submit">Proceed to Payment Options</button>
+<!-- ASK GARBRI HOW TO LINK THIS -->
+<!-- Cannot GET /main/success.html when linking -->
+
+    <!-- <button class="btn btn-primary" type="submit">Proceed to Payment Options</button> -->
+
+    <!-- <a class="btn btn-primary" href="payment-confirmation"> Test </a> -->
+
+    <a href="payment-confirmation">
+      <input class="btn btn-primary" type="submit" value="Confirm & Proceed to Payment">  
+    </a>
 
 
   </form>
 
 
-
-  <!-- <div class="buttons">
-      <a href="#" class="btn btn-primary">Confirm & Process Payment</a>
-    </div> -->
 
 </body>
 
@@ -94,3 +115,18 @@
 <select id="card-type" name="payment-card">
 <option value ="mastercard">Mastercard</option>
 </select> -->
+
+
+<!-- <label>Password:</label>
+        <input type="password" class="textInput"  id="signup__pwd" name = "pwd"/> -->
+
+<!-- <div class="terms">
+      <input type="checkbox" />
+      <label>I agree to the terms and privacy policy</label>
+    </div> -->
+
+
+
+<!-- <div class="buttons">
+      <a href="#" class="btn btn-primary">Confirm & Process Payment</a>
+    </div> -->
