--- a/main/shopping-cart.html
+++ b/main/shopping-cart.html
@@ -17,18 +17,12 @@
 <body>
 
     <div class="header-cluster">
-        <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Shop</a></div>
-        <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
-        <!-- <div><a class="btn btn-primary btn-primary--accent" href="#">Product</a></div> -->
-        <div><a class="btn btn-primary btn-primary--accent" href="#">Cart</a></div>
-        <div><a class="btn btn-primary btn-primary--accent" href="#">Account</a></div>
         <div><a class="logo" href="index.html">
                 <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a></div>
     </div>
 
 
     <section class="container content-section">
-        <h2 class="section-header">MUSIC</h2>
         <div class="shop-items">
             <div class="shop-item">
                 <span class="shop-item-title">Album 1</span>
@@ -64,6 +58,8 @@
             </div>
         </div>
     </section>
+
+    
     <section class="container content-section">
         <h2 class="section-header">MERCH</h2>
         <div class="shop-items">
@@ -77,7 +73,7 @@
             </div>
             <div class="shop-item">
                 <span class="shop-item-title">Album 6</span>
-                <img class="shop-item-image" src="Images/Cofee.png">
+                <img class="shop-item-image" src="https://www.discrepancy-records.com.au/assets/thumb/W0-244669.jpg?20210920125555">
                 <div class="shop-item-details">
                     <span class="shop-item-price">$6.99</span>
                     <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -93,7 +89,7 @@
             <span class="cart-quantity cart-header cart-column">QUANTITY</span>
         </div>
         <div class="cart-items">
-            <div class="cart-row">
+            <!-- <div class="cart-row">
                 <div class="cart-item cart-column">
                     <img class="cart-item-image" src="https://www.discrepancy-records.com.au/assets/full/16210769.jpg?20210309032750" width="100" height="100">
                     <span class="cart-item-title">T-Shirt</span>
@@ -114,35 +110,45 @@
                     <input class="cart-quantity-input" type="number" value="2">
                     <button class="btn btn-danger" type="button">REMOVE</button>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="cart-total">
             <strong class="cart-total-title">Total</strong>
-            <span class="cart-total-price">$39.97</span>
+            <span class="cart-total-price">$0</span>
         </div>
         <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
     </section>
+
+
+
     <footer class="main-footer">
         <div class="container main-footer-container">
-            <h3 class="band-name">The Generics</h3>
+
             <ul class="nav footer-nav">
+                <div>
+                    <a href="index.html">
+                        <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a>
+                </div>
                 <li>
-                    <a href="https://www.youtube.com" target="_blank">
-                        <img src="Images/YouTube Logo.png">
+                    <a href="" target="_blank">
+                        <img src="">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.spotify.com" target="_blank">
-                        <img src="Images/Spotify Logo.png">
+                    <a href="" target="_blank">
+                        <img src="">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com" target="_blank">
-                        <img src="Images/Facebook Logo.png">
+                    <a href="" target="_blank">
+                        <img src="">
                     </a>
                 </li>
             </ul>
         </div>
     </footer>
+
+
+
 </body>
 </html>
