adjusted title margin in hompage

--- a/main/index.html
+++ b/main/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-    <div class="header-cluster">
+    <div class="main-header">
         <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Shop</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
         <!-- <div><a class="btn btn-primary btn-primary--accent" href="#">Product</a></div> -->
@@ -37,9 +37,15 @@
         <div>Our Story</div>
     </div> -->
 
+
+
+
+<div class="titles">
     <h1>Featured Artists</h1>
+</div>
+   
     <div class="product-layout">
-        
+     
         <div class="product-card">
             <!-- <h3 class="product-name"> Enfant Sauvage </h3> -->
             <img src="https://www.enfantsauvagemusic.com/images/Enfant-Sauvage---PETRICHOR-p-800.jpeg">
