--- a/main/search-page.html
+++ b/main/search-page.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="cluster">
+    <div class="header-main">
         <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Shop</a></div>
         <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
         <!-- <div><a class="btn btn-primary btn-primary--accent" href="#">Product</a></div> -->
