--- a/main/shopping-cart.html
+++ b/main/shopping-cart.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div class="header-cluster">
+    <div class="header-main">
         <div><a class="logo" href="index.html">
                 <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a></div>
     </div>
@@ -59,7 +59,7 @@
         </div>
     </section>
 
-    
+
     <section class="container content-section">
         <h2 class="section-header">MERCH</h2>
         <div class="shop-items">
@@ -129,21 +129,6 @@
                     <a href="index.html">
                         <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a>
                 </div>
-                <li>
-                    <a href="" target="_blank">
-                        <img src="">
-                    </a>
-                </li>
-                <li>
-                    <a href="" target="_blank">
-                        <img src="">
-                    </a>
-                </li>
-                <li>
-                    <a href="" target="_blank">
-                        <img src="">
-                    </a>
-                </li>
             </ul>
         </div>
     </footer>
