gave the homepage a footer class

--- a/main/index.html
+++ b/main/index.html
@@ -113,7 +113,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="main-footer">
         <div>
             <li>About Us</li>
             <li>Information</li>
