adjusted alignment of items in index footer

--- a/main/index.html
+++ b/main/index.html
@@ -40,12 +40,12 @@
 
 
 
-<div class="titles">
-    <h1>Featured Artists</h1>
-</div>
-   
+    <div class="titles">
+        <h1>Featured Artists</h1>
+    </div>
+
     <div class="product-layout">
-     
+
         <div class="product-card">
             <!-- <h3 class="product-name"> Enfant Sauvage </h3> -->
             <img src="https://www.enfantsauvagemusic.com/images/Enfant-Sauvage---PETRICHOR-p-800.jpeg">
@@ -113,7 +113,7 @@
         </div>
     </div>
 
-    <footer class="main-footer">
+    <!-- <footer class="main-footer">
         <div>
             <li>About Us</li>
             <li>Information</li>
@@ -122,6 +122,24 @@
         <div>
             <a href="index.html">
                 <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a>
+        </div>
+    </footer> -->
+
+
+    <footer class="main-footer">
+        <div class="container main-footer-container">
+
+            <ul class="nav footer-nav">
+                <div>
+                    <li>About Us</li>
+                    <li>Information</li>
+                    <li>Contact Us</li>
+                </div>
+            </ul>
+            <a href="index.html">
+                <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a>
+        </div>
+
         </div>
     </footer>
 
