--- a/main/search-page.html
+++ b/main/search-page.html
@@ -79,6 +79,23 @@
             </div>
         </div>
 
+        </div>
+
+
+        <footer class="main-footer">
+            <div class="container main-footer-container">
+
+                <ul class="nav footer-nav">
+                    <div>
+                        <li>About Us</li>
+                        <li>Information</li>
+                        <li>Contact Us</li>
+                    </div>
+                </ul>
+                <a href="index.html">
+                    <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a>
+            </div>
+        </footer>
 
 </body>
 
