relinked search-page images to assets folder

--- a/main/index.html
+++ b/main/index.html
@@ -23,7 +23,7 @@
         <div><a class="" href="#">Cart</a></div>
         <div><a class="" href="#">Account</a></div>
         <div><a class="logo" href="index.html">
-                <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a></div>
+                <img src="/assets/images/oz_music_logo.png" alt=""></a></div>
     </div>
 
     </div>
@@ -140,7 +140,7 @@
                 </div>
             </ul>
             <a href="index.html">
-                <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a>
+                <img src="/assets/images/oz_music_logo.png" alt=""></a>
         </div>
     </footer>
 
