--- a/main/search-page.html
+++ b/main/search-page.html
@@ -38,42 +38,53 @@
 
     <div class="product-layout">
         <div class="product-card">
-            <img src="https://www.discrepancy-records.com.au/assets/full/W0-50625.jpg?20211110190251" alt="">
+            <img src="/assets/images/lausse-the-cat.jpg" alt="">
         </div>
 
-        <div class="product-card"> <img src="https://f4.bcbits.com/img/a2431281189_2.jpg" alt="">
+        <div class="product-card"> 
+            <div class="product-info">
+                <a href=""><img src="/assets/images/mt_mountain_tassels.jpg">
+                </a>
+            </div>
         </div>
 
-        <div class="product-card"> <img src="https://f4.bcbits.com/img/a3843978202_16.jpg" alt="">
+        <div class="product-card"> 
+            <div class="product-info">
+                <a href=""><img src=" /assets/images/problems-i-never-learn.jpg">
+                </a>
+            </div>
         </div>
 
-        <div class="product-card"> <img src="https://f4.bcbits.com/img/a2791434963_16.jpg" alt="">
+        <div class="product-card"> 
+            <div class="product-info">
+                <a href=""><img src="/assets/images/ross-from-friends-aphelion-ep.jpg">
+                </a>
+            </div>
         </div>
-    </div>
 
+       
 
-    <div class="product-layout">
         <div class="product-card">
-            <img src="https://www.discrepancy-records.com.au/assets/full/SON00063.jpg?20211111125827" alt="">
+            <img src="/assets/images/velvet_morning_gorilla.jpg" alt="">
         </div>
 
         <div class="product-card">
             <div class="product-info">
-                <a href="indv-prod-pg.html"><img src="https://f4.bcbits.com/img/a0586786272_16.jpg">
+                <a href=""><img src="/assets/images/shred-gnar.jpg">
                 </a>
             </div>
         </div>
 
         <div class="product-card">
             <div class="product-info">
-                <a href="indv-prod-pg.html"><img src="https://f4.bcbits.com/img/a1456774771_10.jpg" alt="">
+                <a href=""><img src="/assets/images/self_harm.jpg" alt="">
                 </a>
             </div>
         </div>
 
         <div class="product-card">
             <div class="product-info">
-                <a href="indv-prod-pg.html"><img src="https://f4.bcbits.com/img/a0751377172_16.jpg" alt="">
+                <a href=""><img src="/assets/images/saint_cs_kreme.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -92,7 +103,7 @@
                     </div>
                 </ul>
                 <a href="index.html">
-                    <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a>
+                    <img src="/assets/images/oz_music_logo.png" alt=""></a>
             </div>
         </footer>
 
