laid out featured album images on homepage

--- a/main/index.html
+++ b/main/index.html
@@ -56,77 +56,75 @@
         </div>
     </section>
 
-    <section class="portfolio"></section>
-    <h1>Featured Albums</h1>
+    <section class="portfolio">
+        
+        <h1>Featured Albums</h1>
+
+        <!-- Album 1 -->
+        <figure class="port-item">
+            <img src="/assets/images/mt_mountain_tassels.jpg" alt="">
+            <figcaption class="port-desc">
+                <p>Album 1</p>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
+            </figcaption>
+        </figure>
+
+
+        <!-- Album 2 -->
+        <figure class="port-item">
+            <img src="/assets/images/lausse-the-cat.jpg" alt="">
+            <figcaption class="port-desc">
+                <p>Album 2</p>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
+            </figcaption>
+        </figure>
 
 
 
+        <!-- Album 3 -->
+        <figure class="port-item">
+            <img src="/assets/images/self_harm.jpg" alt="">
+            <figcaption class="port-desc">
+                <p>Album 3</p>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
+            </figcaption>
+        </figure>
 
 
 
-    <!-- Album 1 -->
-    <figure class="port-item">
-        <img src="" alt="">
-        <figcaption class="port-desc">
-            <p>Album 1</p>
-            <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
-        </figcaption>
-    </figure>
-
-
-    <!-- Album 2 -->
-    <figure class="port-item">
-        <img src="/assets/images/lausse-the-cat.jpg" alt="">
-        <figcaption class="port-desc">
-            <p>Album 2</p>
-            <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
-        </figcaption>
-    </figure>
+        <!-- Album 4 -->
+        <figure class="port-item">
+            <img src="/assets/images/doom.jpg" alt="">
+            <figcaption class="port-desc">
+                <p>Album 4</p>
+                <a href="indv-prod-pg" class="button button-accent button-small">Link</a>
+            </figcaption>
+        </figure>
 
 
 
-    <!-- Album 3 -->
-    <figure class="port-item">
-        <img src="/assets/images/cities_aviv.jpg" alt="">
-        <figcaption class="port-desc">
-            <p>Album 3</p>
-            <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
-        </figcaption>
-    </figure>
+        <!-- Album 5 -->
+        <figure class="port-item">
+            <img src="/assets/images/cowboy-bebop-ost.jpg" alt="">
+            <figcaption class="port-desc">
+                <p>Album 5</p>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
+            </figcaption>
+        </figure>
 
 
 
-    <!-- Album 4 -->
-    <figure class="port-item">
-        <img src="/assets/images/black-marble.jpg" alt="">
-        <figcaption class="port-desc">
-            <p>Album 4</p>
-            <a href="indv-prod-pg" class="button button-accent button-small">Link</a>
-        </figcaption>
-    </figure>
+        <!-- Album 6 -->
+        <figure class="port-item">
+            <img src="/assets/images/crywank.jpg" alt="">
+            <figcaption class="port-desc">
+                <p>Album 6</p>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
+            </figcaption>
+        </figure>
 
 
-
-    <!-- Album 5 -->
-    <figure class="port-item">
-        <img src="" alt="">
-        <figcaption class="port-desc">
-            <p>Album 5</p>
-            <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
-        </figcaption>
-    </figure>
-
-
-
-    <!-- Album 6 -->
-    <figure class="port-item">
-        <img src="" alt="">
-        <figcaption class="port-desc">
-            <p>Album 6</p>
-            <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
-        </figcaption>
-    </figure>
-
+    </section>
 
     <footer>
         <div class="span-3">
