--- a/main/shopping-cart.html
+++ b/main/shopping-cart.html
@@ -121,7 +121,7 @@
 
 
 
-    <footer class="main-footer">
+    <!-- <footer class="main-footer">
         <div class="container main-footer-container">
 
             <ul class="nav footer-nav">
@@ -131,7 +131,8 @@
                 </div>
             </ul>
         </div>
-    </footer>
+    </footer> -->
+
 
 
 
